[gd_scene load_steps=5 format=3 uid="uid://bfman5r853hpr"]

[ext_resource type="Theme" uid="uid://dvnhrp7jsje0b" path="res://default_theme.tres" id="1_t7e0r"]
[ext_resource type="Script" uid="uid://dhvy5nxql7nyg" path="res://ui/main_menu.gd" id="2_wk0pr"]
[ext_resource type="Texture2D" uid="uid://knt0cky2dd60" path="res://ui/back.PNG" id="3_wk0pr"]
[ext_resource type="PackedScene" uid="uid://ck6ah5y0filmr" path="res://ui/loading.tscn" id="4_rmr83"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t7e0r")
script = ExtResource("2_wk0pr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_wk0pr")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.800719, 0.791335, 0.467493, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 64
text = "Well well..."
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.792157, 0.466667, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "Ludum Dare #57"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button_start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = " START GAME "

[node name="Button_info" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = " INFO "

[node name="Button_quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = " QUIT "

[node name="Button_fullscreen" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = " toggle fullscreen "

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.792157, 0.466667, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "april 2025"
horizontal_alignment = 1

[node name="Loading" parent="." instance=ExtResource("4_rmr83")]
visible = false

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button_start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button_info" to="." method="_on_button_info_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button_quit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button_fullscreen" to="." method="_on_button_fullscreen_pressed"]
